--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <script charset="utf-8" src="https://map.qq.com/api/js?v=2.exp&key=ZYMBZ-3EYKD-QCK4A-PN4DY-25NT6-72BK5"></script>
     <title>thu-lost-and-found-web</title>
   </head>
   <body>
